wrk load tests, switch to TrieMap lock-free data structure for storage